# django-parlor

./: CHANGES.md  README.md  pyproject.toml
.github/workflows/: main.yml
parlor/: admin.py  models.py
tests/: models.py  settings.py  tests.py
